textwrap and fixes to font in who is typing

--- a/client/components/repl/repl.css
+++ b/client/components/repl/repl.css
@@ -2,6 +2,10 @@
   height: 100%;
   min-height: 100%;
   border-radius: 6px;
+  font-size: 16px;
+  width: 100%;
+  position: absolute;
+  padding-right: 20px;
 }
 
 .react-codemirror2 {
@@ -29,7 +33,7 @@
   font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS',
     sans-serif;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 10px;
   color: #b5f44a;
   text-decoration: none;
   background-color: #434371;
@@ -96,11 +100,13 @@
 .currently-typing {
   position: absolute;
   z-index: 3;
-  left: 80%;
+  left: 70%;
   font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS',
     sans-serif;
   font-weight: 500;
-  font-size: 10px;
+  font-size: 14px;
+  text-align: left;
   color: #b5f44a;
+  max-width: 100%;
   margin: 0;
 }
